# DesignPattern

./: .gitignore  README.md  docker-compose.yaml
DDD/server/django/: Dockerfile  runtestcov.sh
MVC/django/: Dockerfile  README.md  a.py  docker-compose.yaml
MVC/django/project/: manage.py
docker/dockerfile/: Python_Dockerfile
sample/dyo/: Dockerfile  package.json
sample/frontend/: Dockerfile  docker-compose.yaml  entry.sh
sample/frontend/basolato.lp/: README.md  package-lock.json  package.json  preact.config.js  size-plugin.json
sample/frontend/dyo/: tsconfig.json  webpack.config.js
sample/frontend/dyo.qiita/: README.md  package.json  webpack.config.js.bk
sample/frontend/dyoSsr/: package.json  webpack.config.js
sample/frontend/hyperApp/: package.json
sample/frontend/preact.default/: package.json  (+1 more)
src/DDD/server/django/: docker-compose.yaml  pyproject.toml
src/DDD/server/django/project/: db.sqlite3
src/DDD/server/django/project/V1/: entity.py  service.py
src/DDD/server/django/project/django_sample_restful/: apps.py
src/DDD/server/django/project/django_sample_webpage/: orator.py  views.py
src/DDD/server/django/project/models/: admin.py  models.py  orator.py
src/DDD/server/django/project/models/management/commands/: loadcsv.py  resetdb.py
src/DDD/server/django/project/models/migrations/: 0001_initial.py
src/DDD/server/django/project/project/: PasswordViews.py  settings.py  urls.py
src/DDD/server/django/project/project/settings/: settings.py
src/DDD/server/django/project/templates/django_sample_webpage/: edit.html  show.html
(+116 files in other folders)
